chore: delete unused routes for game
