# server/src/routes/index.ts
@@ -5,13 +5,10 @@ export const routes = Router();
 
 routes.get('/api/hello', controllers.hello);
 // Games
-routes.get('/api/games', controllers.GameController.getList);
 routes.get('/api/games/:id', controllers.GameController.getOne);
 routes.post('/api/games', controllers.GameController.create);
-routes.put('/api/games/:id', controllers.GameController.update);
 routes.put('/api/games/:gameId/join', controllers.GameController.join);
 routes.put('/api/games/:gameId/start', controllers.GameController.start);
-routes.delete('/api/games/:id', controllers.GameController.delete);
 
 // Locations
 routes.get('/api/locations', controllers.LocationController.getList);
