# server/swagger.json
@@ -27,21 +27,6 @@
   "produces": ["application/json"],
   "paths": {
     "/games": {
-      "get": {
-        "tags": ["Games"],
-        "summary": "Get all games in system",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/Games"
-            }
-          },
-          "500": {
-            "description": "Something went wrong"
-          }
-        }
-      },
       "post": {
         "tags": ["Games"],
         "summary": "Create new game",
@@ -90,56 +75,6 @@
           },
           "404": {
             "description": "Game not found"
-          },
-          "500": {
-            "description": "Something went wrong"
-          }
-        }
-      },
-      "delete": {
-        "tags": ["Games"],
-        "summary": "Delete game by id",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "description": "ID of game that we want to delete",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "Game deleted"
-          },
-          "500": {
-            "description": "Something went wrong"
-          }
-        }
-      },
-      "put": {
-        "tags": ["Games"],
-        "summary": "Update game by id",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "description": "ID of game that we want to update",
-            "type": "string"
-          },
-          {
-            "name": "game",
-            "in": "body",
-            "description": "Game with new values of properties",
-            "schema": {
-              "$ref": "#/definitions/GameDto"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Game updated"
           },
           "500": {
             "description": "Something went wrong"
@@ -307,10 +242,6 @@
           "enum": ["New", "InProgress", "Finished"]
         }
       }
-    },
-    "Games": {
-      "type": "array",
-      "$ref": "#/definitions/Game"
     },
     "Location": {
       "required": ["name"],
